RESOLVED FIXED61202
[Qt] fast/canvas/webgl/gl-object-get-calls.html crash for Qt based webkit
https://bugs.webkit.org/show_bug.cgi?id=61202
Summary [Qt] fast/canvas/webgl/gl-object-get-calls.html crash for Qt based webkit
Idrees
Reported 2011-05-20 11:20:29 PDT
fast/canvas/webgl/gl-object-get-calls.html crashes for on qt webkit. It seems like a unintentional left out from the code.
Attachments
Test case (12.62 KB, text/html)
2011-05-20 11:21 PDT, Idrees
no flags
Patch for the fix. (1.61 KB, patch)
2011-05-20 11:33 PDT, Idrees
no flags
Idrees
Comment 1 2011-05-20 11:21:17 PDT
Created attachment 94245 [details] Test case
Idrees
Comment 2 2011-05-20 11:33:07 PDT
Created attachment 94249 [details] Patch for the fix. getAttachedShaders should be called on GraphicsContext3DInternal instance. I think it was left by mistake. I have added it.
Andreas Kling
Comment 3 2011-05-22 23:00:20 PDT
Comment on attachment 94249 [details] Patch for the fix. Infinite recursion eh? Nice catch. r=me
WebKit Commit Bot
Comment 4 2011-05-23 01:07:15 PDT
Comment on attachment 94249 [details] Patch for the fix. Clearing flags on attachment: 94249 Committed r87059: <http://trac.webkit.org/changeset/87059>
WebKit Commit Bot
Comment 5 2011-05-23 01:07:20 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 6 2011-05-27 11:36:06 PDT
Revision r87059 cherry-picked into qtwebkit-2.2 with commit d14495f <http://gitorious.org/webkit/qtwebkit/commit/d14495f>
Note You need to log in before you can comment on or make changes to this bug.